sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() {
^AlgCocktailSort1:2: error: expected class or object definition
def cocktailSort() {
^AlgCocktailSort1:10: error: Missing closing brace `}' assumed here
    for (i <- getNombreValeurs()-2 to 0 by -1){
    ^AlgCocktailSort1:19: error: Missing closing brace `}' assumed here
}
^