sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var chgt = false
  while (chgt){
    for (i <- 0 to getNombreValeurs()-2){
      if (!plusPetit(i,i+1)){
        echange(i,i+1)
        chgt = true
      }
    for (i <- getNombreValeurs()-2 to 0 by -1){
      if (plusPetit(i,i+1)){
        echange(i,i+1)
        chgt = true
      }
    }
  